# check24_gendev

./: CONCEPT.md  DEVELOPER_GUIDELINE.md  Justfile  README.md  docker-compose.yml  settings.toml
clients/android/: settings.gradle.kts
clients/android/app/: build.gradle.kts
clients/android/app/src/androidTest/java/com/garfield100/gendev/: ExampleInstrumentedTest.kt
clients/android/app/src/main/: AndroidManifest.xml
clients/android/app/src/main/java/com/garfield100/gendev/: FirstFragment.kt  MainActivity.kt  SecondFragment.kt
clients/android/app/src/main/java/com/garfield100/gendev/adapter/: CarouselItemAdapter.kt  CarouselListAdapter.kt
clients/android/app/src/main/java/com/garfield100/gendev/model/: Carousel.kt  CarouselItem.kt
clients/android/app/src/main/res/layout/: carousel_item.xml  carousel_list_item.xml  fragment_first.xml
clients/android/app/src/main/res/menu/: menu_main.xml
clients/android/app/src/main/res/navigation/: nav_graph.xml
clients/android/app/src/main/res/values/: strings.xml  themes.xml
clients/android/app/src/main/res/values-night/: themes.xml
clients/android/app/src/main/res/values-v23/: themes.xml
clients/android/app/src/test/java/com/garfield100/gendev/: ExampleUnitTest.kt
clients/android/gradle/wrapper/: gradle-wrapper.properties
clients/web/: Justfile  package-lock.json  package.json
clients/web/app/: layout.tsx  page.tsx  sdui.ts
clients/web/app/playground/: exampleJson.json  page.tsx
clients/web/app/sduiComponents/: button.tsx  card.tsx  carousel.tsx  renderer.tsx  string.tsx
clients/web/components/: emptyPage.tsx  themeToggle.tsx
clients/web/components/sduiComponents/: button.tsx  card.tsx  carousel.tsx  image.tsx  renderer.tsx  string.tsx
services/home_backend/: Cargo.toml
services/home_backend/domain/: Cargo.toml
services/home_backend/domain/src/: lib.rs  personalisation.rs  product.rs  widget.rs  widget_repository.rs
services/home_backend/inbound/: Cargo.toml
services/home_backend/inbound/src/: app_error.rs  main.rs  routes.rs
services/home_backend/outbound/: Cargo.toml
services/home_backend/outbound/assets/: generic_car_insurance.json  generic_cellular.json  generic_horse_insurance.json  generic_travel.json
services/home_backend/outbound/src/: lib.rs  widget_cache.rs
