[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
utoipa = "5.4.0"
uuid = { version = "1.18.1", features = ["v4", "zerocopy"] }
