[package]
name = "outbound"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
assert2 = "0.3.16"
dashmap = "6.1.0"
domain = { version = "0.1.0", path = "../domain" }
fred = "10.1.0"
moka = { version = "0.12.12", features = ["future", "logging"] }
parking_lot = { version = "0.12.5", features = ["arc_lock", "send_guard"] }
serde = { version = "1.0.228", features = ["alloc"] }
serde_json = "1.0.145"
tokio = "1.48.0"
tracing = { version = "0.1.44", features = ["log", "async-await"] }
uuid = { version = "1.18.1", features = ["serde"] }
